--- a/About_Raw.html
+++ b/About_Raw.html
@@ -45,8 +45,7 @@
         retain its configuration when power is removed; it must be
         re-configured at power up.</font></p>
     <p style="margin-bottom: 0in; line-height: 100%"><font
-        face="Liberation Sans, sans-serif">The
-        software is written in Python 2.7 programming language. Thus it
+        face="Liberation Sans, sans-serif">The software package had originally been written in Python 2.7 programming language, but has since been converted to Python 3 (see folder containing scripts converted to python 3). Thus it
         is
         fully compatible with the Linux and Windows (7, 8, 10) operating
         systems. Although it has not been tested, the software should
